# dotfiles-chezmoi

./: .chezmoiignore  .gitignore  CLAUDE.md  README.md  dot_gitconfig.tmpl  dot_gitignore  dot_tmux.conf  dot_wezterm.lua  dot_xprofile  dot_zshrc  run_once_download-wallpaper.sh  run_onchange_after_install-shake-to-find.sh.tmpl
docs/: drawio-mcp-server.md
dot_agents/skills/codex-review-plan/: SKILL.md
dot_agents/skills/cud-compliant-design/: SKILL.md
dot_agents/skills/mozc-dict/: mozc_dict.py  user_dictionary_storage_pb2.py
dot_claude/: CLAUDE.md  claude-powerline.json  executable_statusline.sh  settings.json
dot_claude/skills/: symlink_codex-review-plan  symlink_cud-compliant-design  symlink_handle-bot-review  symlink_mozc-dict
dot_claude/skills/codex-review-plan/: SKILL.md
dot_claude/skills/copilot-review/: SKILL.md
dot_claude/skills/cud-compliant-design/: SKILL.md
dot_claude/skills/handle-bot-review/: SKILL.md
dot_claude/skills/handle-copilot-review/: SKILL.md
dot_claude/skills/mozc-dict/: SKILL.md  mozc_dict.py  user_dictionary_storage_pb2.py
dot_claude/skills/polish-ja/: SKILL.md
dot_config/autorandr/: settings.ini
dot_config/autostart/: wallpaper-monitor.desktop
dot_config/ghostty/: config
dot_config/gtk-4.0/: gtk.css
dot_config/nvim/: init.lua
dot_config/shake-to-find/: config.toml
dot_config/yazi/: keymap.toml  yazi.toml
dot_config/zeno/: config.yml
dot_local/src/shake-to-find/: Cargo.toml
dot_local/src/shake-to-find/src/: main.rs
private_dot_ssh/: private_allowed_signers.tmpl  private_config
(+20 files in other folders)
